# snippetbin

./: README.md  mapping
ahk/: barney.ahk  check_for_programs.ahk  manipulate_path.ahk
ahk/acceleration/: accelerator.ahk  todo.txt
applescript/: clush.scpt  cluster_8a_tabbed.asc  itunes.asc  test.scpt
c/EinfachverketteteListe/: Liste.c  Liste.h
c/Lib_CompuTreff/: EEA.c  EEA.c.save  Grundfunktionen_der_Stochastik.c  README_Wichtig  README_Wichtig.save  all.h  all.h.flo  all.h.gch  chinesischer_restsatz.c  chinesischer_restsatz.c.save  fakd.c  faki.c  ggT.c  lib.mk  mbincoeffd.c  subfacl.c  tclr.c
c/Mathematisches/: Grundfunktionen_der_Stochastik.c  atkinsSieb.c  mui.c  sieb  subfacl.c
c/Tabgenerator/: noten.txt  tab.c
c/clib/: Makefile  arr_util.c  buffered_read.c  buffered_write.c  clibf.h  convert_permissions.c  convert_permissions.c~  deamonize.c  dl_list.c  sl_list.c  sl_stack.c  slist.h  str_dyn.c  str_tok.c  structs.h  test  typed_list  typed_list.c
c/listings/: build.sh  dynArr.c  listing001.c  listing002.c  listing003.c  listing005.c  listing006.c  listing007.c  lst001  lst002  lst003  lst004  lst004.c  lst005  lst006  lst007  preListing001.c  preLst001  (+2 more)
c/tools/bashm/: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  README  bashm  bashm.c  bashm.h  config.status  configure  configure.ac  old
c/tools/bashm/.deps/: bashm.Po
c/tools/bashm/autom4te.cache/: output.1  output.3  traces.0  traces.1  traces.2  traces.3
haskell/: first  first.hi  first.hs
lua/: loops.lua
pseudo/: permutation.txt
shell/: obfuscated_no1.sh  tree.sh
(+196 files in other folders)
